# FDM-CHALLENGE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  forecast_logic.ipynb  init.sql  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: black.yml
app/: crud.py  database.py  main.py
app/api/: routes.py
app/models/: pydantic.py  schema.py
tests/: test_api.py  test_simple.py
utility/: linear_fit.py  preprocess.py
