[project]
name = "fdm-challenge"
version = "1.0.0"
description = "Steel Production Planning & Forecasting API"
authors = [
    {name = "Duarte Alexandrino", email = "d.alexandrino2010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.7",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "black>=25.1.0",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "utility"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
